[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/GamjaFlower-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = SubResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 95.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "OGT MAKER v0.5"
align = 1
valign = 1

[node name="FileName" type="LineEdit" parent="."]
margin_left = 701.0
margin_top = 172.0
margin_right = 1172.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "file_name.ogt"

[node name="OGTSizeW" type="LineEdit" parent="."]
margin_left = 704.0
margin_top = 268.0
margin_right = 906.0
margin_bottom = 342.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "width"

[node name="OGTSizeH" type="LineEdit" parent="."]
margin_left = 968.0
margin_top = 268.0
margin_right = 1170.0
margin_bottom = 342.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "height"

[node name="OpenOGTButton" type="Button" parent="."]
margin_left = 208.0
margin_top = 300.0
margin_right = 471.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 1 )
text = "Open OGT"

[node name="NewOGTButton" type="Button" parent="."]
margin_left = 813.0
margin_top = 366.0
margin_right = 1076.0
margin_bottom = 436.0
custom_fonts/font = SubResource( 1 )
text = "New OGT"

[node name="OGTDialog" type="FileDialog" parent="."]
margin_left = 171.0
margin_top = 128.0
margin_right = 1168.0
margin_bottom = 597.0
window_title = "Open an OGT"
mode = 0
access = 2
filters = PoolStringArray( "*.ogt; OGT Files" )

[connection signal="pressed" from="OpenOGTButton" to="." method="_on_OpenOGTButton_pressed"]
[connection signal="pressed" from="NewOGTButton" to="." method="_on_NewOGTButton_pressed"]
[connection signal="file_selected" from="OGTDialog" to="." method="_on_OGTDialog_file_selected"]
